--- a/src/app/main-content/pages/about-me/about-me.component.html
+++ b/src/app/main-content/pages/about-me/about-me.component.html
@@ -2,7 +2,7 @@
 
 <section id="about-me-container">
     <p>
-        Senior Full Stack Developer with extensive expertise in Java Spring Boot and Angular frameworks, specialized in
+        Senior Software Engineer with extensive expertise in Java Spring Boot and Angular frameworks, specialized in
         designing and implementing scalable microservices architectures for the financial sector. Demonstrated
         leadership capabilities in agile development environments with a proven track record of delivering high-quality
         enterprise solutions. Committed to technical excellence, continuous innovation, and collaborative team
