--- a/src/app/main-content/pages/about-me/about-me.component.scss
+++ b/src/app/main-content/pages/about-me/about-me.component.scss
@@ -4,11 +4,22 @@
   display: block;
 }
 
+@keyframes text-appear {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 p {
   font-family: 'Victor Mono', monospace;
   color: colors.$white;
   line-height: 1.6;
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-align: left;
+  animation: text-appear 1s ease-out forwards;
 }
