--- a/src/app/main-content/pages/experience/experience.component.scss
+++ b/src/app/main-content/pages/experience/experience.component.scss
@@ -70,7 +70,7 @@ footer {
 }
 
 .timeline-content {
-  padding: 25px;
+  padding: 1rem;
   background: colors.$white;
   border-radius: 15px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.1);
@@ -134,7 +134,6 @@ footer {
   color: #1f2937;
   font-size: 1.25em;
   font-weight: 700;
-  margin-bottom: 15px;
 }
 
 .timeline-description {
