--- a/src/app/main-content/pages/experience/experience.component.html
+++ b/src/app/main-content/pages/experience/experience.component.html
@@ -11,10 +11,9 @@
           <h4 class="timeline-title">{{ event.title }}</h4>
           <p class="timeline-description">{{ event.description }}</p>
           <div class="timeline-skills">
-            <span class="skill-tag">Angular 18</span>
-            <span class="skill-tag">.NET Core</span>
-            <span class="skill-tag">Azure</span>
-            <span class="skill-tag">CI/CD</span>
+            @for (tec of event.tecnologies; track $index) {
+              <span class="skill-tag">{{ tec }}</span>
+            }
           </div>
           <div class="timeline-dot"></div>
         </div>
