--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -13,19 +13,17 @@
   </nav>
 </header>
 
-<main class="projects">
-  <section class="projects-container">
-    @for (item of [1,2,3,4,5,6,4,7,9,8]; track item) {
-      <div class="card">
-        <img src="assets/imgs/garou.webp" alt="Avatar" class="avatar" loading="lazy">
-        <h2>Daniel</h2>
-        <p>Desarrollador Full Stack</p>
-        <div class="social-links">
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
+<section class="projects-container">
+  @for (item of projects; track item.title) {
+    <div class="card">
+      <img [src]="item.icon" alt="Avatar" class="avatar" loading="lazy">
+      <h2> {{ item.title }} </h2>
+      <p>{{ item.description }}</p>
+      <div class="tec-container">
+        @for (tag of item.tecnologies; track tag) {
+          <span class="tag">{{ tag }}</span>
+        }
       </div>
-    }
-  </section>
-</main>
+    </div>
+  }
+</section>
