--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -1,6 +1,6 @@
 <app-main-content-header [title]="'Projects'" />
 
-<header class="projects__header">
+<!-- <header class="projects__header">
   <nav class="projects__nav">
     <a href="#" class="projects__nav-link projects__nav-link--active">All</a>
     <a href="#" class="projects__nav-link">Full Stack</a>
@@ -8,7 +8,7 @@
     <a href="#" class="projects__nav-link">Backend</a>
     <a href="#" class="projects__nav-link">Mobile</a>
   </nav>
-</header>
+</header> -->
 
 <section class="projects__list">
   @for (item of projects; track item.title) {
@@ -26,8 +26,8 @@
           }
         </div>
         <footer class="projects__card-footer">
-          <a href="#" class="projects__card-link">GitHub <img src="assets/icons/iconfinder_github_icon.svg" alt="GitHub"></a>
-          <a href="#" class="projects__card-link">Live Demo <span>&#8599;</span></a>
+          <a class="projects__card-link">GitHub <img src="assets/icons/iconfinder_github_icon.svg" alt="GitHub"></a>
+          <a class="projects__card-link">Live Demo <span>&#8599;</span></a>
         </footer>
       </div>
     </div>
